--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,1 @@
-{
-    "files.associations": {
-        "*.rsh": "javascript"
-    },
-    "javascript.suggest.completeFunctionCalls": true
-}
+{"files.associations":{"*.rsh":"javascript"}}
